system/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: common-alb
    alb.ingress.kubernetes.io/group.order: "20"
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1/write
            pathType: Prefix
            backend:
              service:
                name: ipiece-monitoring-kube-pro-prometheus
                port:
                  number: 9090
          - path: /loki/api/v1/push
            pathType: Prefix
            backend:
              service:
                name: ipiece-monitoring-loki
                port:
                  number: 3100
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: ipiece-monitoring-grafana
                port:
                  number: 80
